@@ -11,6 +11,7 @@ import static no.nav.foreldrepenger.datavarehus.v2.StønadsstatistikkVedtak.Ytel
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.math.BigDecimal;
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.util.List;
 
@@ -20,6 +21,8 @@ import jakarta.validation.Validation;
 import org.junit.jupiter.api.Test;
 
 import no.nav.foreldrepenger.behandling.BehandlingReferanse;
+import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingType;
+import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingÅrsakType;
 import no.nav.foreldrepenger.behandlingslager.behandling.beregning.BeregningsresultatAndel;
 import no.nav.foreldrepenger.behandlingslager.behandling.beregning.BeregningsresultatEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.beregning.BeregningsresultatPeriode;
@@ -30,6 +33,7 @@ import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.Oppgitt
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittFordelingEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittPeriodeBuilder;
 import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioMorSøkerForeldrepenger;
+import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioMorSøkerSvangerskapspenger;
 import no.nav.foreldrepenger.behandlingslager.uttak.PeriodeResultatType;
 import no.nav.foreldrepenger.behandlingslager.uttak.Utbetalingsgrad;
 import no.nav.foreldrepenger.behandlingslager.uttak.UttakArbeidType;
@@ -44,8 +48,11 @@ import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakResultatPeriodeEntit
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakResultatPerioderEntitet;
 import no.nav.foreldrepenger.behandlingslager.virksomhet.Arbeidsgiver;
 import no.nav.foreldrepenger.dbstoette.CdiDbAwareTest;
+import no.nav.foreldrepenger.domene.entiteter.BGAndelArbeidsforhold;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagEntitet;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagPeriode;
+import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagPrStatusOgAndel;
+import no.nav.foreldrepenger.domene.modell.kodeverk.AktivitetStatus;
 import no.nav.foreldrepenger.domene.modell.kodeverk.BeregningsgrunnlagTilstand;
 import no.nav.foreldrepenger.domene.prosess.BeregningsgrunnlagKopierOgLagreTjeneste;
 import no.nav.foreldrepenger.domene.typer.Beløp;
@@ -70,11 +77,13 @@ class StønadsstatistikkTjenesteTest {
         var arbeidsgiver = Arbeidsgiver.virksomhet("123");
         var periodeVirkedager = 65;
         var uttak = lagUttak(fødselsdato, arbeidsgiver, periodeVirkedager);
+        var søknadsdato = fødselsdato.minusWeeks(3);
         var scenario = ScenarioMorSøkerForeldrepenger.forFødsel()
             .medFødselAdopsjonsdato(fødselsdato)
             .medFordeling(new OppgittFordelingEntitet(List.of(søktPeriode), true))
             .medDefaultOppgittDekningsgrad()
             .medOppgittRettighet(OppgittRettighetEntitet.beggeRett())
+            .medSøknadDato(søknadsdato)
             .medUttak(uttak);
         scenario.medBehandlingVedtak().medVedtakResultatType(VedtakResultatType.INNVILGET).medVedtakstidspunkt(fødselsdato.atStartOfDay());
         var behandling = scenario.lagre(repositoryProvider);
@@ -91,15 +100,15 @@ class StønadsstatistikkTjenesteTest {
             .leggTilBeregningsgrunnlagPeriode(beregningsgrunnlagPeriode)
             .build();
         beregningsgrunnlagKopierOgLagreTjeneste.lagreBeregningsgrunnlag(behandling.getId(), beregningsgrunnlag, BeregningsgrunnlagTilstand.FASTSATT);
-        var uttaksperiode = uttak.getPerioder().get(0);
+        var uttaksperiode = uttak.getPerioder().getFirst();
         var beregningsresultat = lagBeregningsresultatMedAndel(uttaksperiode);
         repositoryProvider.getBeregningsresultatRepository().lagre(behandling, beregningsresultat);
-        var beregningsresultatPeriode = beregningsresultat.getBeregningsresultatPerioder().get(0);
-        var andel = beregningsresultatPeriode.getBeregningsresultatAndelList().get(0);
+        var beregningsresultatPeriode = beregningsresultat.getBeregningsresultatPerioder().getFirst();
+        var andel = beregningsresultatPeriode.getBeregningsresultatAndelList().getFirst();
 
 
         var ref = BehandlingReferanse.fra(behandling, skjæringstidspunktTjeneste.getSkjæringstidspunkter(behandling.getId()));
-        var vedtak = stønadsstatistikkTjeneste.genererVedtak(ref);
+        var vedtak = stønadsstatistikkTjeneste. genererVedtak(ref);
 
         assertThat(vedtak.getBehandlingUuid()).isEqualTo(behandling.getUuid());
         assertThat(vedtak.getSkjæringstidspunkt()).isEqualTo(fødselsdato);
@@ -115,14 +124,15 @@ class StønadsstatistikkTjenesteTest {
         assertThat(vedtak.getVilkårIkkeOppfylt()).isNull();
         assertThat(vedtak.getYtelseType()).isEqualTo(YtelseType.FORELDREPENGER);
         assertThat(vedtak.getAnnenForelder()).isNull();
+        assertThat(vedtak.getSøknadsdato()).isEqualTo(søknadsdato);
 
         assertThat(vedtak.getFamilieHendelse().hendelseType()).isEqualTo(HendelseType.FØDSEL);
         assertThat(vedtak.getFamilieHendelse().adopsjonsdato()).isNull();
         assertThat(vedtak.getFamilieHendelse().antallBarn()).isEqualTo(1);
         assertThat(vedtak.getFamilieHendelse().termindato()).isNull();
         assertThat(vedtak.getFamilieHendelse().barn()).hasSize(1);
-        assertThat(vedtak.getFamilieHendelse().barn().get(0).fødselsdato()).isEqualTo(fødselsdato);
-        assertThat(vedtak.getFamilieHendelse().barn().get(0).dødsdato()).isNull();
+        assertThat(vedtak.getFamilieHendelse().barn().getFirst().fødselsdato()).isEqualTo(fødselsdato);
+        assertThat(vedtak.getFamilieHendelse().barn().getFirst().dødsdato()).isNull();
 
         assertThat(vedtak.getBeregning().årsbeløp().brutto()).isEqualByComparingTo(bruttoPrÅr);
         assertThat(vedtak.getBeregning().årsbeløp().avkortet()).isEqualByComparingTo(avkortetPrÅr);
@@ -140,29 +150,126 @@ class StønadsstatistikkTjenesteTest {
                 new ForeldrepengerRettigheter.Trekkdager(0)));
 
         assertThat(vedtak.getUttaksperioder()).hasSize(1);
-        assertThat(vedtak.getUttaksperioder().get(0).fom()).isEqualTo(uttaksperiode.getFom());
-        assertThat(vedtak.getUttaksperioder().get(0).tom()).isEqualTo(uttaksperiode.getTom());
-        assertThat(vedtak.getUttaksperioder().get(0).type()).isEqualTo(StønadsstatistikkUttakPeriode.PeriodeType.UTTAK);
-        assertThat(vedtak.getUttaksperioder().get(0).trekkdager().antall()).isEqualTo(
-            uttaksperiode.getAktiviteter().get(0).getTrekkdager().decimalValue());
-        assertThat(vedtak.getUttaksperioder().get(0).forklaring()).isNull();
-        assertThat(vedtak.getUttaksperioder().get(0).virkedager()).isEqualTo(periodeVirkedager);
-        assertThat(vedtak.getUttaksperioder().get(0).erUtbetaling()).isTrue();
-        assertThat(vedtak.getUttaksperioder().get(0).samtidigUttakProsent()).isNull();
-        assertThat(vedtak.getUttaksperioder().get(0).gradering()).isNull();
-        assertThat(vedtak.getUttaksperioder().get(0).rettighetType()).isEqualTo(RettighetType.BEGGE_RETT);
-        assertThat(vedtak.getUttaksperioder().get(0).stønadskontoType()).isEqualTo(StønadsstatistikkVedtak.StønadskontoType.MØDREKVOTE);
+        assertThat(vedtak.getUttaksperioder().getFirst().fom()).isEqualTo(uttaksperiode.getFom());
+        assertThat(vedtak.getUttaksperioder().getFirst().tom()).isEqualTo(uttaksperiode.getTom());
+        assertThat(vedtak.getUttaksperioder().getFirst().type()).isEqualTo(StønadsstatistikkUttakPeriode.PeriodeType.UTTAK);
+        assertThat(vedtak.getUttaksperioder().getFirst().trekkdager().antall()).isEqualTo(
+            uttaksperiode.getAktiviteter().getFirst().getTrekkdager().decimalValue());
+        assertThat(vedtak.getUttaksperioder().getFirst().forklaring()).isNull();
+        assertThat(vedtak.getUttaksperioder().getFirst().virkedager()).isEqualTo(periodeVirkedager);
+        assertThat(vedtak.getUttaksperioder().getFirst().erUtbetaling()).isTrue();
+        assertThat(vedtak.getUttaksperioder().getFirst().samtidigUttakProsent()).isNull();
+        assertThat(vedtak.getUttaksperioder().getFirst().gradering()).isNull();
+        assertThat(vedtak.getUttaksperioder().getFirst().rettighetType()).isEqualTo(RettighetType.BEGGE_RETT);
+        assertThat(vedtak.getUttaksperioder().getFirst().stønadskontoType()).isEqualTo(StønadsstatistikkVedtak.StønadskontoType.MØDREKVOTE);
 
         assertThat(vedtak.getUtbetalingsreferanse()).isEqualTo(String.valueOf(behandling.getId()));
         assertThat(vedtak.getUtbetalingssperioder()).hasSize(1);
-        assertThat(vedtak.getUtbetalingssperioder().get(0).fom()).isEqualTo(uttaksperiode.getFom());
-        assertThat(vedtak.getUtbetalingssperioder().get(0).tom()).isEqualTo(uttaksperiode.getTom());
-        assertThat(vedtak.getUtbetalingssperioder().get(0).utbetalingsgrad()).isEqualTo(andel.getUtbetalingsgrad());
-        assertThat(vedtak.getUtbetalingssperioder().get(0).arbeidsgiver()).isEqualTo(
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().fom()).isEqualTo(uttaksperiode.getFom());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().tom()).isEqualTo(uttaksperiode.getTom());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().utbetalingsgrad()).isEqualTo(andel.getUtbetalingsgrad());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().arbeidsgiver()).isEqualTo(
             andel.getArbeidsgiver().map(Arbeidsgiver::getIdentifikator).orElseThrow());
-        assertThat(vedtak.getUtbetalingssperioder().get(0).dagsats()).isEqualTo(beregningsresultatPeriode.getDagsats());
-        assertThat(vedtak.getUtbetalingssperioder().get(0).inntektskategori()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Inntektskategori.ARBEIDSTAKER);
-        assertThat(vedtak.getUtbetalingssperioder().get(0).mottaker()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Mottaker.BRUKER);
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().dagsats()).isEqualTo(beregningsresultatPeriode.getDagsats());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().inntektskategori()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Inntektskategori.ARBEIDSTAKER);
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().mottaker()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Mottaker.BRUKER);
+
+        try (var factory = Validation.buildDefaultValidatorFactory()) {
+            var validated = factory.getValidator().validate(vedtak);
+            assertThat(validated).isEmpty();
+        }
+    }
+
+    @Test
+    void mor_svangerskapspenger_revurdering() {
+        var baselineDato = LocalDate.now().with(DayOfWeek.WEDNESDAY);
+        var arbeidsgiver = Arbeidsgiver.virksomhet("123");
+        var søknadsdato = baselineDato.minusDays(2);
+        var førstegang = ScenarioMorSøkerSvangerskapspenger.forSvangerskapspenger()
+            .medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD)
+            .medDefaultSøknadTerminbekreftelse()
+            .medSøknadDato(søknadsdato);
+        var scenario = ScenarioMorSøkerSvangerskapspenger.forSvangerskapspenger()
+            .medBehandlingType(BehandlingType.REVURDERING)
+            .medOriginalBehandling(førstegang.lagre(repositoryProvider), BehandlingÅrsakType.RE_ENDRING_FRA_BRUKER)
+            .medDefaultSøknadTerminbekreftelse()
+            .medSøknadDato(søknadsdato);
+        scenario.medBehandlingVedtak().medVedtakResultatType(VedtakResultatType.INNVILGET).medVedtakstidspunkt(baselineDato.atStartOfDay());
+        var behandling = scenario.lagre(repositoryProvider);
+        var grunnbeløp = Beløp.av(100000);
+        var bruttoPrÅr = BigDecimal.valueOf(999000);
+        var avkortetPrÅr = grunnbeløp.getVerdi().multiply(BigDecimal.valueOf(6));
+        var redusertPrÅr = BigDecimal.valueOf(200000);
+        var beregningsgrunnlag = BeregningsgrunnlagEntitet.ny()
+            .medSkjæringstidspunkt(baselineDato)
+            .medGrunnbeløp(grunnbeløp)
+            .build();
+        var beregningsgrunnlagPeriode = new BeregningsgrunnlagPeriode.Builder().medBeregningsgrunnlagPeriode(baselineDato.minusYears(1),
+            baselineDato.plusYears(1)).medBruttoPrÅr(bruttoPrÅr).medAvkortetPrÅr(avkortetPrÅr).medRedusertPrÅr(redusertPrÅr).build(beregningsgrunnlag);
+        BeregningsgrunnlagPrStatusOgAndel.builder()
+            .medAktivitetStatus(AktivitetStatus.ARBEIDSTAKER)
+            .medBGAndelArbeidsforhold(BGAndelArbeidsforhold.builder().medArbeidsgiver(arbeidsgiver).medRefusjonskravPrÅr(bruttoPrÅr))
+            .medBeregnetPrÅr(bruttoPrÅr)
+            .medAvkortetPrÅr(avkortetPrÅr)
+            .medRedusertPrÅr(redusertPrÅr)
+            .build(beregningsgrunnlagPeriode);
+
+        beregningsgrunnlagKopierOgLagreTjeneste.lagreBeregningsgrunnlag(behandling.getId(), beregningsgrunnlag, BeregningsgrunnlagTilstand.FASTSATT);
+        var beregningsresultat = lagBeregningsresultatMedAndel(baselineDato, baselineDato.plusDays(19), arbeidsgiver, false);
+        repositoryProvider.getBeregningsresultatRepository().lagre(behandling, beregningsresultat);
+        var beregningsresultatPeriode = beregningsresultat.getBeregningsresultatPerioder().getFirst();
+        var andel = beregningsresultatPeriode.getBeregningsresultatAndelList().getFirst();
+
+
+        var ref = BehandlingReferanse.fra(behandling, skjæringstidspunktTjeneste.getSkjæringstidspunkter(behandling.getId()));
+        var vedtak = stønadsstatistikkTjeneste. genererVedtak(ref);
+
+        assertThat(vedtak.getBehandlingUuid()).isEqualTo(behandling.getUuid());
+        assertThat(vedtak.getSkjæringstidspunkt()).isEqualTo(baselineDato);
+        assertThat(vedtak.getEngangsstønadInnvilget()).isNull();
+        assertThat(vedtak.getLovVersjon()).isEqualTo(LovVersjon.SVANGERSKAPSPENGER_2019_01_01);
+        assertThat(vedtak.getForrigeBehandlingUuid()).isNotNull();
+        assertThat(vedtak.getRevurderingÅrsak()).isEqualTo(StønadsstatistikkVedtak.RevurderingÅrsak.SØKNAD);
+        assertThat(vedtak.getSaksnummer().id()).isEqualTo(behandling.getFagsak().getSaksnummer().getVerdi());
+        assertThat(vedtak.getFagsakId()).isEqualTo(behandling.getFagsak().getId());
+        assertThat(vedtak.getSøker().id()).isEqualTo(behandling.getAktørId().getId());
+        assertThat(vedtak.getSaksrolle()).isEqualTo(Saksrolle.MOR);
+        assertThat(vedtak.getVedtaksresultat()).isEqualTo(VedtakResultat.INNVILGET);
+        assertThat(vedtak.getUtlandsTilsnitt()).isEqualTo(UtlandsTilsnitt.NASJONAL);
+        assertThat(vedtak.getVilkårIkkeOppfylt()).isNull();
+        assertThat(vedtak.getYtelseType()).isEqualTo(YtelseType.SVANGERSKAPSPENGER);
+        assertThat(vedtak.getAnnenForelder()).isNull();
+        assertThat(vedtak.getSøknadsdato()).isEqualTo(søknadsdato);
+
+        assertThat(vedtak.getFamilieHendelse().hendelseType()).isEqualTo(HendelseType.FØDSEL);
+        assertThat(vedtak.getFamilieHendelse().adopsjonsdato()).isNull();
+        assertThat(vedtak.getFamilieHendelse().antallBarn()).isEqualTo(0);
+        assertThat(vedtak.getFamilieHendelse().termindato()).isEqualTo(LocalDate.now().plusDays(40));
+        assertThat(vedtak.getFamilieHendelse().barn()).hasSize(0);
+
+        assertThat(vedtak.getBeregning().årsbeløp().brutto()).isEqualByComparingTo(bruttoPrÅr);
+        assertThat(vedtak.getBeregning().årsbeløp().avkortet()).isEqualByComparingTo(avkortetPrÅr);
+        assertThat(vedtak.getBeregning().årsbeløp().redusert()).isEqualByComparingTo(avkortetPrÅr);
+        assertThat(vedtak.getBeregning().næringOrgNr()).isEmpty();
+        assertThat(vedtak.getBeregning().grunnbeløp()).isEqualByComparingTo(grunnbeløp.getVerdi());
+        assertThat(vedtak.getBeregning().andeler()).hasSize(1);
+        assertThat(vedtak.getBeregning().andeler().getFirst().årsbeløp().brutto()).isEqualTo(bruttoPrÅr);
+        assertThat(vedtak.getBeregning().andeler().getFirst().årsbeløp().avkortet()).isNull();
+        assertThat(vedtak.getBeregning().andeler().getFirst().aktivitet()).isEqualTo(StønadsstatistikkVedtak.AndelType.ARBEIDSTAKER);
+
+        assertThat(vedtak.getForeldrepengerRettigheter()).isNull();
+        assertThat(vedtak.getUttaksperioder()).isNull();
+
+        assertThat(vedtak.getUtbetalingsreferanse()).isEqualTo(String.valueOf(behandling.getId()));
+        assertThat(vedtak.getUtbetalingssperioder()).hasSize(1);
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().fom()).isEqualTo(baselineDato);
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().tom()).isEqualTo(baselineDato.plusDays(19));
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().utbetalingsgrad()).isEqualTo(andel.getUtbetalingsgrad());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().arbeidsgiver()).isEqualTo(
+            andel.getArbeidsgiver().map(Arbeidsgiver::getIdentifikator).orElseThrow());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().dagsats()).isEqualTo(beregningsresultatPeriode.getDagsats());
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().inntektskategori()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Inntektskategori.ARBEIDSTAKER);
+        assertThat(vedtak.getUtbetalingssperioder().getFirst().mottaker()).isEqualTo(StønadsstatistikkUtbetalingPeriode.Mottaker.ARBEIDSGIVER);
 
         try (var factory = Validation.buildDefaultValidatorFactory()) {
             var validated = factory.getValidator().validate(vedtak);
@@ -171,17 +278,22 @@ class StønadsstatistikkTjenesteTest {
     }
 
     private BeregningsresultatEntitet lagBeregningsresultatMedAndel(UttakResultatPeriodeEntitet uttaksperiode) {
+        return lagBeregningsresultatMedAndel(uttaksperiode.getFom(), uttaksperiode.getTom(), uttaksperiode.getAktiviteter().getFirst()
+            .getArbeidsgiver(), true);
+    }
+
+    private BeregningsresultatEntitet lagBeregningsresultatMedAndel(LocalDate fom, LocalDate tom, Arbeidsgiver arbeidsgiver, boolean brukerErMottaker) {
         var beregningsresultat = BeregningsresultatEntitet.builder().medRegelSporing(" ").medRegelInput(" ").build();
         var beregningsresultatPeriode = BeregningsresultatPeriode.builder()
-            .medBeregningsresultatPeriodeFomOgTom(uttaksperiode.getFom(), uttaksperiode.getTom())
+            .medBeregningsresultatPeriodeFomOgTom(fom, tom)
             .build(beregningsresultat);
         new BeregningsresultatAndel.Builder().medDagsats(1000)
             .medDagsatsFraBg(1000)
             .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
-            .medBrukerErMottaker(true)
+            .medBrukerErMottaker(brukerErMottaker)
             .medStillingsprosent(BigDecimal.valueOf(100))
             .medUtbetalingsgrad(BigDecimal.valueOf(100))
-            .medArbeidsgiver(uttaksperiode.getAktiviteter().get(0).getArbeidsgiver())
+            .medArbeidsgiver(arbeidsgiver)
             .build(beregningsresultatPeriode);
 
         beregningsresultat.addBeregningsresultatPeriode(beregningsresultatPeriode);
